; ModuleID = '/home/carl/AnghaBench/redis/src/extr_acl.c_authCommand.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_acl.c_authCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32 }
%struct.TYPE_10__ = type { i32 }
%struct.TYPE_8__ = type { i32, i32** }

@shared = common dso_local global %struct.TYPE_9__ zeroinitializer, align 4
@DefaultUser = common dso_local global %struct.TYPE_10__* null, align 8
@USER_FLAG_NOPASS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [121 x i8] c"AUTH <password> called without any password configured for the default user. Are you sure your configuration is correct?\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"default\00", align 1
@C_OK = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [42 x i8] c"-WRONGPASS invalid username-password pair\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @authCommand(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  %5 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = icmp sgt i32 %7, 3
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @shared, i32 0, i32 1), align 4
  %12 = call i32 @addReply(%struct.TYPE_8__* %10, i32 %11)
  br label %68

13:                                               ; preds = %1
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = icmp eq i32 %16, 2
  br i1 %17, label %18, label %35

18:                                               ; preds = %13
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** @DefaultUser, align 8
  %20 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @USER_FLAG_NOPASS, align 4
  %23 = and i32 %21, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %18
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %27 = call i32 @addReplyError(%struct.TYPE_8__* %26, i8* getelementptr inbounds ([121 x i8], [121 x i8]* @.str, i64 0, i64 0))
  br label %68

28:                                               ; preds = %18
  %29 = call i32* @createStringObject(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 7)
  store i32* %29, i32** %3, align 8
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 1
  %32 = load i32**, i32*** %31, align 8
  %33 = getelementptr inbounds i32*, i32** %32, i64 1
  %34 = load i32*, i32** %33, align 8
  store i32* %34, i32** %4, align 8
  br label %46

35:                                               ; preds = %13
  %36 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %37 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %36, i32 0, i32 1
  %38 = load i32**, i32*** %37, align 8
  %39 = getelementptr inbounds i32*, i32** %38, i64 1
  %40 = load i32*, i32** %39, align 8
  store i32* %40, i32** %3, align 8
  %41 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %42 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %41, i32 0, i32 1
  %43 = load i32**, i32*** %42, align 8
  %44 = getelementptr inbounds i32*, i32** %43, i64 2
  %45 = load i32*, i32** %44, align 8
  store i32* %45, i32** %4, align 8
  br label %46

46:                                               ; preds = %35, %28
  %47 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %48 = load i32*, i32** %3, align 8
  %49 = load i32*, i32** %4, align 8
  %50 = call i64 @ACLAuthenticateUser(%struct.TYPE_8__* %47, i32* %48, i32* %49)
  %51 = load i64, i64* @C_OK, align 8
  %52 = icmp eq i64 %50, %51
  br i1 %52, label %53, label %57

53:                                               ; preds = %46
  %54 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %55 = load i32, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @shared, i32 0, i32 0), align 4
  %56 = call i32 @addReply(%struct.TYPE_8__* %54, i32 %55)
  br label %60

57:                                               ; preds = %46
  %58 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %59 = call i32 @addReplyError(%struct.TYPE_8__* %58, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.2, i64 0, i64 0))
  br label %60

60:                                               ; preds = %57, %53
  %61 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %62 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 8
  %64 = icmp eq i32 %63, 2
  br i1 %64, label %65, label %68

65:                                               ; preds = %60
  %66 = load i32*, i32** %3, align 8
  %67 = call i32 @decrRefCount(i32* %66)
  br label %68

68:                                               ; preds = %9, %25, %65, %60
  ret void
}

declare dso_local i32 @addReply(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @addReplyError(%struct.TYPE_8__*, i8*) #1

declare dso_local i32* @createStringObject(i8*, i32) #1

declare dso_local i64 @ACLAuthenticateUser(%struct.TYPE_8__*, i32*, i32*) #1

declare dso_local i32 @decrRefCount(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
